fix: fixed styling of landing page on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -176,12 +176,6 @@ body {
 	}
 }
 
-@media (max-width: 767px) {
-	#site-shell {
-		overflow-x: clip;
-	}
-}
-
 button,
 input,
 textarea {
